Fix mobile devices not flex wrapping correctly

--- a/app/assets/stylesheets/games.scss
+++ b/app/assets/stylesheets/games.scss
@@ -17,7 +17,7 @@
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: center;
-	text-align: center
+	text-align: center;
 }
 
 .team {
